--- a/index.html
+++ b/index.html
@@ -72,12 +72,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="headernavi">
 		<div class="fixed">
 			<div class="inner">
-				<p class="web"><a href="https://www.efiller.jp/contact/"><img src="img/header_btn_01.png" alt="【WEB予約】無料カウンセリング"></a></p>
-				<a href="/contact/?clinic=common" onclick="ga('send', 'event', 'mail', 'click', 'test_opt');"></a> <!--mail追記-->
-				<p class="tel"><a href="tel:0120-966-901"><img src="img/header_btn_02.png" alt="【電話予約】相談もお気軽に"></a></p>
-				<a href="tel:0120966901" onclick="ga('send', 'event', 'tel', 'click', 'test_opt');"></a><!--tell追記-->
-				<p class="line"><a href="https://www.efiller.jp/linemenu/"><img src="img/header_btn_03.png" alt="【LINE予約】クーポン配信中"></a><!--line追記-->
-				<a href="https://www.efiller.jp/linemenu/" target="_blank" onclick="ga('send', 'event', 'line', 'click', 'test_opt');"></a>
+				<p class="web"><a href="https://www.efiller.jp/contact/" onclick="ga('send', 'event', 'mail', 'click', 'test_opt');"><img src="img/header_btn_01.png" alt="【WEB予約】無料カウンセリング"></a></p><!--mail追記-->
+				<p class="tel"><a href="tel:0120-966-901" onclick="ga('send', 'event', 'tel', 'click', 'test_opt');"><img src="img/header_btn_02.png" alt="【電話予約】相談もお気軽に"></a></p><!--tell追記-->
+				<p class="line"><a href="https://www.efiller.jp/linemenu/" onclick="ga('send', 'event', 'line', 'click', 'test_opt');"><img src="img/header_btn_03.png" alt="【LINE予約】クーポン配信中"></a><!--line追記-->
 			</p>
 			</div>
 		</div>
