--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-81121425-2', 'auto', {'allowLinker': true});
+ga('create', 'UA-81121425-20000000000000000000000000', 'auto', {'allowLinker': true});
 ga('require', 'linker');
 ga('linker:autoLink', ['efiller-sh.jp','efiller-ik.jp','efiller-ow.jp','efiller.jp','efiller-eb.jp']);
 ga('send', 'pageview');
