--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-81121425-20000000000000000000000000', 'auto', {'allowLinker': true});
+ga('create', 'UA-163599227-1', 'auto', {'allowLinker': true}); //GAテスト
 ga('require', 'linker');
 ga('linker:autoLink', ['efiller-sh.jp','efiller-ik.jp','efiller-ow.jp','efiller.jp','efiller-eb.jp']);
 ga('send', 'pageview');
@@ -72,9 +72,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="headernavi">
 		<div class="fixed">
 			<div class="inner">
-				<p class="web"><a href="https://www.efiller.jp/contact/" onclick="ga('send', 'event', 'mail', 'click', 'test_opt');"><img src="img/header_btn_01.png" alt="【WEB予約】無料カウンセリング"></a></p><!--mail追記-->
-				<p class="tel"><a href="tel:0120-966-901" onclick="ga('send', 'event', 'tel', 'click', 'test_opt');"><img src="img/header_btn_02.png" alt="【電話予約】相談もお気軽に"></a></p><!--tell追記-->
-				<p class="line"><a href="https://www.efiller.jp/linemenu/" onclick="ga('send', 'event', 'line', 'click', 'test_opt');"><img src="img/header_btn_03.png" alt="【LINE予約】クーポン配信中"></a><!--line追記-->
+				<p class="web"><a href="https://www.efiller.jp/contact/" onclick="ga('send', 'event', 'mail', 'click', 'test_opt');"><img src="img/header_btn_01.png" alt="【WEB予約】無料カウンセリング"></a></p><!--mailクリック追記-->
+				<p class="tel"><a href="tel:0120-966-901" onclick="ga('send', 'event', 'tel', 'click', 'test_opt');"><img src="img/header_btn_02.png" alt="【電話予約】相談もお気軽に"></a></p><!--tellクリック追記-->
+				<p class="line"><a href="https://www.efiller.jp/linemenu/" onclick="ga('send', 'event', 'line', 'click', 'test_opt');"><img src="img/header_btn_03.png" alt="【LINE予約】クーポン配信中"></a><!--lineクリック追記-->
 			</p>
 			</div>
 		</div>
