--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div id="wrapper">
 	<div class="headernavi">
-		<div class="fixed">
-			<div class="inner">
-				<p class="web"><a href="https://www.efiller.jp/contact/" onclick="ga('send', 'event', 'mail', 'click', 'test_opt');"><img src="img/header_btn_01.png" alt="【WEB予約】無料カウンセリング"></a></p><!--mailクリック追記-->
-				<p class="tel"><a href="tel:0120-966-901" onclick="ga('send', 'event', 'tel', 'click', 'test_opt');"><img src="img/header_btn_02.png" alt="【電話予約】相談もお気軽に"></a></p><!--tellクリック追記-->
-				<p class="line"><a href="https://www.efiller.jp/linemenu/" onclick="ga('send', 'event', 'line', 'click', 'test_opt');"><img src="img/header_btn_03.png" alt="【LINE予約】クーポン配信中"></a><!--lineクリック追記-->
-			</p>
-			</div>
-		</div>
+	  <div class="fixed">
+	    <div class="inner">
+	      <p class="web"><a href="https://www.efiller.jp/contact/" onclick="ga('send', 'event', 'mail', 'click', 'lp_pc');"><img src="img/header_btn_01.png" alt="【WEB予約】無料カウンセリング"></a></p><!--mailクリック追記 ※依頼者にラベル確認→「lp_pc」部分！！-->
+	      <p class="tel"><a href="tel:0120-966-901" onclick="ga('send', 'event', 'tel', 'click', 'lp_pc');"><img src="img/header_btn_02.png" alt="【電話予約】相談もお気軽に"></a></p><!--tellクリック追記 ※依頼者にラベル確認→「lp_pc」部分！！-->
+	      <p class="line"><a href="https://www.efiller.jp/linemenu/" onclick="ga('send', 'event', 'line', 'click', 'lp_pc');"><img src="img/header_btn_03.png" alt="【LINE予約】クーポン配信中"></a><!--lineクリック追記 ※依頼者にラベル確認→「lp_pc」部分！！-->
+	      </p>
+	    </div>
+	  </div>
 	</div>
 	
 	<div id="fv">
